# COVID-19

./: .gitignore  Cargo.toml  README.md
settings_data/: watchlist.csv
src/: main.rs
