[package]
name = "covid"
version = "0.1.0"
authors = ["Hadrien Hamana <hadrien@hamana.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }